deploy/k8s/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # Deployment的元数据
  name: relation-service-dep
  labels:
    app: relation-service
spec:
  replicas: 1 # ReplicaSet部分的定义
  selector:
    matchLabels:
      app: relation-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template: # Pod 模板的定义
    metadata:
      labels:
        app: relation-service
    spec: # Pod里容器相关的定义
      containers:
        - name: relation-service
          image: qloog/relation-service:v0.0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m" # 0.3核，1000m = 1核心
          ports:
            - containerPort: 8080
            - containerPort: 9090
          readinessProbe: # 就绪探针
            exec:
              command: [ "/bin/grpc_health_probe", "-addr=:9090" ]
            initialDelaySeconds: 5
          livenessProbe: # 存活探针
            exec:
              command: [ "/bin/grpc_health_probe", "-addr=:9090" ]
            initialDelaySeconds: 10
