deploy/k8s/go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relation-ingress
  annotations:
    nginx.org/lb-method: round_robin
    #kubernetes.io/ingress.class: "nginx"              # 指定 Ingress Controller 的类型
    #nginx.ingress.kubernetes.io/use-regex: "true"     # 指定我们的 rules 的 path 可以使用正则表达式
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: ngx-ink
  rules:
    - host: relation-app.dev # 需要在host中进行绑定，ip为(minikube ip)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 8080

---
# Ingress Class
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ngx-ink

spec:
  controller: nginx.org/ingress-controller
---
